// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea /> Spec Snapshots should render a filled and disabled textarea 1`] = `
.c0 {
  position: relative;
  display: flex;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #ECEAF1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #332C3A;
  resize: vertical;
  border: 2px solid #D8D6DB;
  background: #FFFFFF;
  opacity: 0.5;
}

.c1::placeholder {
  color: #727683;
}

.c1:hover {
  background: #D8D6DB;
}

.c1:focus {
  border: 2px solid #7989F7;
  background: #FFFFFF;
}

.c1:hover {
  background: #FFFFFF;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      disabled=""
      id="id"
      name=""
      rows="5"
    >
      Test
    </textarea>
  </div>
</div>
`;

exports[`<Textarea /> Spec Snapshots should render a filled textarea 1`] = `
.c0 {
  position: relative;
  display: flex;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #ECEAF1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #332C3A;
  resize: vertical;
  border: 2px solid transparent;
}

.c1::placeholder {
  color: #727683;
}

.c1:hover {
  background: #D8D6DB;
}

.c1:focus {
  border: 2px solid #7989F7;
  background: #FFFFFF;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      id="id"
      name=""
      rows="5"
    >
      Test
    </textarea>
  </div>
</div>
`;

exports[`<Textarea /> Spec Snapshots should render a textarea which is resizable 1`] = `
.c0 {
  position: relative;
  display: flex;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #ECEAF1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #332C3A;
  resize: vertical;
  border: 2px solid transparent;
}

.c1::placeholder {
  color: #727683;
}

.c1:hover {
  background: #D8D6DB;
}

.c1:focus {
  border: 2px solid #7989F7;
  background: #FFFFFF;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      id="id"
      name=""
      rows="5"
    >
      Test
    </textarea>
  </div>
</div>
`;

exports[`<Textarea /> Spec Snapshots should render a textarea with an error 1`] = `
.c0 {
  position: relative;
  display: flex;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #ECEAF1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #332C3A;
  resize: vertical;
  background: #FFE7E6;
  border: 2px solid transparent;
}

.c1::placeholder {
  color: #727683;
}

.c1:hover {
  background: #D8D6DB;
}

.c1:focus {
  border: 2px solid #7989F7;
  background: #FFFFFF;
}

.c1:hover {
  background: #FDCAC3;
}

.c1:focus {
  border: 2px solid #FC4F4A;
  background: #FFFFFF;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      id="id"
      name=""
      rows="5"
    >
      Test
    </textarea>
  </div>
</div>
`;

exports[`<Textarea /> Spec Snapshots should render an empty and disabled textarea 1`] = `
.c0 {
  position: relative;
  display: flex;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #ECEAF1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #332C3A;
  resize: vertical;
  border: 2px solid #D8D6DB;
  background: #FFFFFF;
  opacity: 0.5;
}

.c1::placeholder {
  color: #727683;
}

.c1:hover {
  background: #D8D6DB;
}

.c1:focus {
  border: 2px solid #7989F7;
  background: #FFFFFF;
}

.c1:hover {
  background: #FFFFFF;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      disabled=""
      id="id"
      name=""
      placeholder="Placeholder"
      rows="5"
    />
  </div>
</div>
`;
